--- a/EcapProject/pom.xml
+++ b/EcapProject/pom.xml
@@ -26,6 +26,14 @@
     <version>4.7.2</version>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+<dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>5.3.2</version>
+</dependency>
+
+
     
   </dependencies>
 
